# ai-playground

./: MICROSOFT_GRAPH_OAUTH2_GUIDE.md  README.md  workday-oauth2-adk-integration-guide.md
dog-breed-classifier/: Makefile  config.toml  pyproject.toml
dog-breed-classifier/app/: settings.py
dog-breed-classifier/app/models/: config.py
dog-breed-classifier/training/: utils.py
dog-breed-classifier/training/notebooks/: labels_exploration.ipynb
dog-breed-classifier/training/scripts/: create_test_split.py  create_train_split.py  crop_images.py  organize_dataset.py  train_classifier.py  unpack_bounding_boxes.py
dog-detection/: .gitignore  Makefile  pyproject.toml
dog-detection/tests/: conftest.py  test_utils.py
dog_detection/: README.md  config.yaml
dog_detection/scripts/: download_folder.py  update_labels.py  upload_folder.py
dog_detection/src/: settings.py  storage.py  utils.py
dog_detection/tests/: test_storage.py
outlook_graph_skill/: .env.example  .gitignore  PYDANTIC_MIGRATION.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  __init__.py  requirements.txt
outlook_graph_skill/auth/: __init__.py  authenticator.py  token_cache.py
outlook_graph_skill/config/: __init__.py  config.example.json  settings.py
outlook_graph_skill/examples/: usage_examples.py
outlook_graph_skill/mailbox/: __init__.py  email_client.py  message.py  search.py
outlook_graph_skill/tests/: __init__.py  test_config.py
outlook_graph_skill/utils/: __init__.py  exceptions.py  pydantic_helpers.py  validators.py
workday_procurement_api/: .env.example  .gitignore  README.md  __init__.py  main.py  requirements.txt
workday_procurement_api/api/: dependencies.py  routes.py
workday_procurement_api/auth/: ws_security.py
workday_procurement_api/config/: settings.py
workday_procurement_api/examples/: usage_examples.py
workday_procurement_api/soap/: client.py
(+3 files in other folders)
